Replacing more Guava with Java8